# src/routes/service.js
@@ -1,9 +1,11 @@
 import express from "express"
-import { registerService } from "../controllers/serviceOffered.js";
+import { deleteRegisteredService, getRegisteredService, registerService } from "../controllers/serviceOffered.js";
 
 const router = express.Router();
 
 
 router.post("/add_newService",registerService)
+router.get("/getAllServices",getRegisteredService)
+router.delete("/delete_service:serviceId",deleteRegisteredService)
 
 export default router;
